mus: Show USER_PRIVATE window container during views tests

If that container starts hidden then tests that open normal user windows will
not be able to focus/activate them.

* Ensure the --user-test-config flag is set in views tests
* Set the USER_PRIVATE container visible when --user-test-config is set
* Rename components/mus/common/args.h to switches.h and place in "switches"
  namespace for consistency with Chrome code
* Add logging to window server for focus failures
* Re-enable WidgetTestInteractive.TouchSelectionQuickMenuIsNotActivated

BUG=611601
TEST=views_mus_interactive_ui_tests as above

Review-Url: https://codereview.chromium.org/1979323002
Cr-Commit-Position: refs/heads/master@{#394310}

Former-commit-id: 8118b48cd97c983be355bce77215faa6de9c61a0